@@ -51,20 +51,29 @@ class Peak_View_Render_Layouts extends Peak_View_Render
      */
     public function render($file, $path = null)
     {
+        // default path, no path submitted
         if(!isset($path)) {
-        	$path = Peak_Core::getPath('theme_layouts');
-        	$no_cache = true;
+            $path = Peak_Core::getPath('theme');
+            $no_cache = true;
         }
+        else $is_scripts_path = true;
         
-        //CONTROLLER FILE VIEW       
+        // absolute file path to render     
         $filepath = $path.'/'.$file;
 
-        if(!file_exists($filepath)) {
-            $filepath = Peak_Registry::o()->app->front->controller->getTitle() .'/'. basename($filepath);
-            throw new Peak_View_Exception('ERR_VIEW_SCRIPT_NOT_FOUND', $filepath);
+        // throw the most reliable exception depending on submitted arguments to this method
+        if(!file_exists($filepath)) {         
+            if(isset($is_scripts_path)) {
+                $filepath = Peak_Registry::o()->app->front->controller->getTitle() .'/'. basename($filepath);
+                throw new Peak_View_Exception('ERR_VIEW_SCRIPT_NOT_FOUND', $filepath);
+            }
+            else {
+                $filepath = str_replace($path, '', $filepath);
+                throw new Peak_View_Exception('ERR_VIEW_FILE_NOT_FOUND', $filepath);
+            }
         }
                      
-        //LAYOUT FILES VIEW IF EXISTS
+        // render the layout if is set
         if((isset($this->_layout_file)) && ($this->isLayout($this->_layout_file))) {
             $filepath = Peak_Core::getPath('theme_layouts').'/'.$this->_layout_file;
             $this->scripts_file = $file;
